language/move-lang/tests/move_check/parser/invalid_call_lhs_value.exp
error: 

   ┌── tests/move_check/parser/invalid_call_lhs_value.move:3:10 ───
   │
 3 │         5();
   │          ^ Unexpected token: '('
   ·
 3 │         5();
   │          - Expected: ';'
   │

